// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ThemeSelector — snapshots should match snapshot for closed state (dark theme) 1`] = `
<div
  class="relative"
>
  <button
    aria-label="Theme selector: Dark (Industrial)"
    class="flex items-center gap-1.5 p-1.5 wb-surface border wb-outline rounded-xs hover:bg-primary/10 hover:border-primary/40 transition-all wb-text-muted hover:text-primary group text-[7px]"
    title="Theme: Dark (Industrial) (click to change)"
  >
    <span
      class="w-2.5 h-2.5 rounded-full shrink-0"
      style="background-color: rgb(0, 240, 255);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette w-3 h-3 group-hover:scale-110 transition-transform"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
  </button>
</div>
`;

exports[`ThemeSelector — snapshots should match snapshot for open dropdown (amber theme) 1`] = `
<div
  class="relative"
>
  <button
    aria-label="Theme selector: Amber (Warm)"
    class="flex items-center gap-1.5 p-1.5 wb-surface border wb-outline rounded-xs hover:bg-primary/10 hover:border-primary/40 transition-all wb-text-muted hover:text-primary group text-[7px]"
    title="Theme: Amber (Warm) (click to change)"
  >
    <span
      class="w-2.5 h-2.5 rounded-full shrink-0"
      style="background-color: rgb(245, 158, 11);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette w-3 h-3 group-hover:scale-110 transition-transform"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
  </button>
  <div
    class="absolute right-0 top-full mt-1 w-[180px] wb-surface border wb-outline rounded-xs shadow-2xl backdrop-blur-xl z-[200] py-1 animate-in fade-in zoom-in-95 duration-100 origin-top-right"
  >
    <button
      aria-label="Select Dark (Industrial) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(0, 240, 255);"
      />
      <span
        class="flex-1 truncate"
      >
        Dark (Industrial)
      </span>
    </button>
    <button
      aria-label="Select Light (Minimal) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(14, 165, 233);"
      />
      <span
        class="flex-1 truncate"
      >
        Light (Minimal)
      </span>
    </button>
    <button
      aria-label="Select Amber (Warm) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left bg-primary/10 text-primary"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(245, 158, 11);"
      />
      <span
        class="flex-1 truncate"
      >
        Amber (Warm)
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-check w-2.5 h-2.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </button>
    <button
      aria-label="Select Cyberpunk (Neon) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(255, 45, 149);"
      />
      <span
        class="flex-1 truncate"
      >
        Cyberpunk (Neon)
      </span>
    </button>
    <button
      aria-label="Select High Contrast theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(255, 255, 255);"
      />
      <span
        class="flex-1 truncate"
      >
        High Contrast
      </span>
    </button>
  </div>
</div>
`;

exports[`ThemeSelector — snapshots should match snapshot for open dropdown (cyberpunk theme) 1`] = `
<div
  class="relative"
>
  <button
    aria-label="Theme selector: Cyberpunk (Neon)"
    class="flex items-center gap-1.5 p-1.5 wb-surface border wb-outline rounded-xs hover:bg-primary/10 hover:border-primary/40 transition-all wb-text-muted hover:text-primary group text-[7px]"
    title="Theme: Cyberpunk (Neon) (click to change)"
  >
    <span
      class="w-2.5 h-2.5 rounded-full shrink-0"
      style="background-color: rgb(255, 45, 149);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette w-3 h-3 group-hover:scale-110 transition-transform"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
  </button>
  <div
    class="absolute right-0 top-full mt-1 w-[180px] wb-surface border wb-outline rounded-xs shadow-2xl backdrop-blur-xl z-[200] py-1 animate-in fade-in zoom-in-95 duration-100 origin-top-right"
  >
    <button
      aria-label="Select Dark (Industrial) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(0, 240, 255);"
      />
      <span
        class="flex-1 truncate"
      >
        Dark (Industrial)
      </span>
    </button>
    <button
      aria-label="Select Light (Minimal) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(14, 165, 233);"
      />
      <span
        class="flex-1 truncate"
      >
        Light (Minimal)
      </span>
    </button>
    <button
      aria-label="Select Amber (Warm) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(245, 158, 11);"
      />
      <span
        class="flex-1 truncate"
      >
        Amber (Warm)
      </span>
    </button>
    <button
      aria-label="Select Cyberpunk (Neon) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left bg-primary/10 text-primary"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(255, 45, 149);"
      />
      <span
        class="flex-1 truncate"
      >
        Cyberpunk (Neon)
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-check w-2.5 h-2.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </button>
    <button
      aria-label="Select High Contrast theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(255, 255, 255);"
      />
      <span
        class="flex-1 truncate"
      >
        High Contrast
      </span>
    </button>
  </div>
</div>
`;

exports[`ThemeSelector — snapshots should match snapshot for open dropdown (dark theme) 1`] = `
<div
  class="relative"
>
  <button
    aria-label="Theme selector: Dark (Industrial)"
    class="flex items-center gap-1.5 p-1.5 wb-surface border wb-outline rounded-xs hover:bg-primary/10 hover:border-primary/40 transition-all wb-text-muted hover:text-primary group text-[7px]"
    title="Theme: Dark (Industrial) (click to change)"
  >
    <span
      class="w-2.5 h-2.5 rounded-full shrink-0"
      style="background-color: rgb(0, 240, 255);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette w-3 h-3 group-hover:scale-110 transition-transform"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
  </button>
  <div
    class="absolute right-0 top-full mt-1 w-[180px] wb-surface border wb-outline rounded-xs shadow-2xl backdrop-blur-xl z-[200] py-1 animate-in fade-in zoom-in-95 duration-100 origin-top-right"
  >
    <button
      aria-label="Select Dark (Industrial) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left bg-primary/10 text-primary"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(0, 240, 255);"
      />
      <span
        class="flex-1 truncate"
      >
        Dark (Industrial)
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-check w-2.5 h-2.5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </button>
    <button
      aria-label="Select Light (Minimal) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(14, 165, 233);"
      />
      <span
        class="flex-1 truncate"
      >
        Light (Minimal)
      </span>
    </button>
    <button
      aria-label="Select Amber (Warm) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(245, 158, 11);"
      />
      <span
        class="flex-1 truncate"
      >
        Amber (Warm)
      </span>
    </button>
    <button
      aria-label="Select Cyberpunk (Neon) theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(255, 45, 149);"
      />
      <span
        class="flex-1 truncate"
      >
        Cyberpunk (Neon)
      </span>
    </button>
    <button
      aria-label="Select High Contrast theme"
      class="w-full flex items-center gap-2 px-3 py-1.5 text-[8px] font-bold uppercase tracking-wider transition-all text-left wb-text-muted hover:wb-text hover:bg-white/5"
    >
      <span
        class="w-2 h-2 rounded-full shrink-0"
        style="background-color: rgb(255, 255, 255);"
      />
      <span
        class="flex-1 truncate"
      >
        High Contrast
      </span>
    </button>
  </div>
</div>
`;
